--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@strapi/plugin-sentry": "^4.1.11",
     "@strapi/plugin-users-permissions": "4.1.11",
     "@strapi/strapi": "4.1.11",
-    "pg": "8.6.0",
+    "pg": "^8.7.3",
+    "pg-connection-string": "^2.5.0",
     "strapi-plugin-entity-relationship-chart": "^4.1.0",
     "strapi-plugin-io": "^1.1.1",
     "strapi-plugin-rest-cache": "^4.2.4",
+    "strapi-plugin-seeds": "^0.1.1",
     "strapi-plugin-vercel-deploy": "^1.0.1",
     "strapi-provider-rest-cache-memory": "^4.2.4"
   },
